--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!--About me-->
     <section aria-labelledby="about" class="container">
 
-        <h2 id="introduction" class="big-title"><span class="emojis" aria-label="¡Hola!">👋 </span>Soy Álvaro Molina, <i class="accent-color regular-weight">diseñador de producto</i></h2>
+        <h2 id="introduction" class="big-title"><span class="emoji" aria-label="¡Hola!">👋 </span>Soy Álvaro Molina, <i class="accent-color regular-weight">diseñador de producto</i></h2>
 
         <article aria-label="Resumen sobre mi y competencias básicas" class="container">
 
@@ -58,7 +58,7 @@
 
         <nav aria-labelledby="go-to-contact" class="container">
 
-            <a id="go-to-contact" class="nav-button align-right basic-paragraph" href="#info" rel="noopener noreferrer" aria-label="Desplazarse a la sección con los datos de contacto" title="Desplazarse directamente a la sección con los datos de contacto">Ir a datos de contacto<span class="icons" aria-hidden="true"> ↓</span></a>
+            <a id="go-to-contact" class="nav-button align-right basic-paragraph" href="#info" rel="noopener noreferrer" aria-label="Desplazarse a la sección con los datos de contacto" title="Desplazarse directamente a la sección con los datos de contacto">Ir a datos de contacto<span class="icon" aria-hidden="true"> ↓</span></a>
 
         </nav>
 
@@ -67,13 +67,13 @@
     <!--Experience-->
     <section aria-labelledby="experience" class="container">
 
-        <h2 id="experience" class="basic-title"><span class="emojis" aria-hidden="true">💼 </span>Experiencia</h2>
+        <h2 id="experience" class="basic-title"><span class="emoji" aria-hidden="true">💼 </span>Experiencia</h2>
 
             <h3 class="big-subtitle content-secondary">Puesto actual</h3>
 
             <article aria-labelledby="role01" class="container highlighted">
 
-                <h4 id="role01" class="small-title">Diseñador de producto en <a class="link" href="https://genially.com/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de Genially">Genially<span class="icons" aria-hidden="true"> ↗</span></a></h4>
+                <h4 id="role01" class="small-title">Diseñador de producto en <a class="link" href="https://genially.com/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de Genially">Genially<span class="icon" aria-hidden="true"> ↗</span></a></h4>
                 <p class="basic-paragraph"><i>Enero 2022 - Actualidad (Remoto)</i></p>
 
                 <h5 class="basic-subtitle content-secondary">Descripción</h5>
@@ -96,7 +96,7 @@
 
             <article aria-labelledby="role02" class="container">
 
-                <h4 id="role02" class="small-title">Diseñador de IU & Sistema de diseño en <a class="link" href="https://genially.com/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de Genially">Genially<span class="icons" aria-hidden="true"> ↗</span></a></h4>
+                <h4 id="role02" class="small-title">Diseñador de IU & Sistema de diseño en <a class="link" href="https://genially.com/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de Genially">Genially<span class="icon" aria-hidden="true"> ↗</span></a></h4>
                 <p class="basic-paragraph"><i>Julio 2020 - Enero 2022 (Remoto)</i></p>
 
                 <h5 class="basic-subtitle content-secondary">Descripción</h5>
@@ -114,7 +114,7 @@
 
             <article aria-labelledby="role03" class="container">
 
-                <h4 id="role03" class="small-title">Diseñador gráfico en <a class="link" href="https://genially.com/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de Genially">Genially<span class="icons" aria-hidden="true"> ↗</span></a></h4>
+                <h4 id="role03" class="small-title">Diseñador gráfico en <a class="link" href="https://genially.com/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de Genially">Genially<span class="icon" aria-hidden="true"> ↗</span></a></h4>
                 <p class="basic-paragraph"><i>Junio 2019 - Julio 2020 (Córdoba)</i></p>
                     
                 <h5 class="basic-subtitle content-secondary">Descripción</h5>
@@ -180,17 +180,17 @@
     <!--Volunteer-->
     <section aria-labelledby="volunteer" class="container">
 
-        <h2 id="volunteer" class="basic-title"><span class="emojis" aria-hidden="true">🛟 </span>Voluntariado</h2>
+        <h2 id="volunteer" class="basic-title"><span class="emoji" aria-hidden="true">🛟 </span>Voluntariado</h2>
 
             <h3 class="big-subtitle content-secondary">Colaboración en curso</h3>
 
             <article aria-labelledby="colab01" class="container highlighted">
 
-                <h4 id="colab01" class="small-title">Colaborador en <a class="link" href="https://www.cicbata.org/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de CiC-Batá">CiC-Batá<span class="icons" aria-hidden="true"> ↗</span></a></h4>
+                <h4 id="colab01" class="small-title">Colaborador en <a class="link" href="https://www.cicbata.org/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de CiC-Batá">CiC-Batá<span class="icon" aria-hidden="true"> ↗</span></a></h4>
                 <p class="basic-paragraph"><i>Junio 2023 - Actualidad (Córdoba)</i></p>
 
                 <h5 class="basic-subtitle content-secondary">Descripción</h5>
-                <p class="basic-paragraph content-secondary">Llevando a cabo un proyecto de investigación para encontrar soluciones que faciliten el acceso a la tecnología y la reducción de la brecha digital en personas mayores. <a class="link" href="https://view.genially.com/65d763a85b5dfb0014dd1b29" target="_blank" rel="noopener noreferrer" title="Ir las conclusiones de la investigación">Ver conclusiones<span class="icons" aria-hidden="true"> ↗</span></a>.</p>
+                <p class="basic-paragraph content-secondary">Llevando a cabo un proyecto de investigación para encontrar soluciones que faciliten el acceso a la tecnología y la reducción de la brecha digital en personas mayores. <a class="link" href="https://view.genially.com/65d763a85b5dfb0014dd1b29" target="_blank" rel="noopener noreferrer" title="Ir las conclusiones de la investigación">Ver conclusiones<span class="icon" aria-hidden="true"> ↗</span></a>.</p>
 
                 <h5 class="basic-subtitle content-secondary">Competencias básicas</h5>
                 <ul class="tag-group">
@@ -205,7 +205,7 @@
 
             <article aria-labelledby="colab02" class="container">
 
-                <h4 id="colab02" class="small-title">Colaboración con <a class="link" href="https://www.ajdem.org/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de la AJDEM">AJDEM<span class="icons" aria-hidden="true"> ↗</span></a></h4>
+                <h4 id="colab02" class="small-title">Colaboración con <a class="link" href="https://www.ajdem.org/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de la AJDEM">AJDEM<span class="icon" aria-hidden="true"> ↗</span></a></h4>
                 <p class="basic-paragraph"><i>Noviembre 2013 (Jaén)</i></p>
 
                 <h5 class="basic-subtitle content-secondary">Descripción</h5>
@@ -225,13 +225,13 @@
     <!--Education-->
     <section aria-labelledby="education" class="container">
 
-        <h2 id="education" class="basic-title"><span class="emojis" aria-hidden="true">📕 </span>Educación y Cursos formativos</h2>
+        <h2 id="education" class="basic-title"><span class="emoji" aria-hidden="true">📕 </span>Educación y Cursos formativos</h2>
 
             <h3 class="big-subtitle content-secondary">Formación en progreso</h3>
 
             <article aria-labelledby="edu05" class="container highlighted">
 
-                <h4 id="edu05" class="small-title">Grado de Diseño de producto digital <a class="link" href="https://www.designgraduate.com/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de Design Graduate">Design Graduate<span class="icons" aria-hidden="true"> ↗</span></a></h4>
+                <h4 id="edu05" class="small-title">Grado de Diseño de producto digital <a class="link" href="https://www.designgraduate.com/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de Design Graduate">Design Graduate<span class="icon" aria-hidden="true"> ↗</span></a></h4>
                 <p class="basic-paragraph"><i>Instituto Tramontana, 2023 - Actualidad (Remoto)</i></p>
                 <p class="basic-paragraph content-secondary">Titulación no reglada.</p>
 
@@ -324,13 +324,13 @@
     <!--Acknowledgements-->
     <section aria-labelledby="acknowledgements" class="container">
 
-        <h2 id="acknowledgements" class="basic-title"><span class="emojis" aria-hidden="true">🏅 </span>Reconocimientos</h2>
+        <h2 id="acknowledgements" class="basic-title"><span class="emoji" aria-hidden="true">🏅 </span>Reconocimientos</h2>
 
         <article aria-labelledby="award01" class="container highlighted">
 
             <h3 id="award01" class="small-title">Premio a la Mejor Dirección de Fotografía en VI Rodando por Jaén</h3>
             <p class="basic-paragraph"><i>Septiembre 2018 (Jaén)</i></p>
-            <p class="basic-paragraph content-secondary">Premio expedido por la Diputación de Jaén por el Cortometraje Habitación 205. <a class="link" href="https://jaenaudiovisual.es/palmares-del-vi-rodando-por-jaen/" target="_blank" rel="noopener noreferrer" title="Ir a la página web con la nota de prensa">Ver nota de prensa<span class="icons" aria-hidden="true"> ↗</span></a>.</p>
+            <p class="basic-paragraph content-secondary">Premio expedido por la Diputación de Jaén por el Cortometraje Habitación 205. <a class="link" href="https://jaenaudiovisual.es/palmares-del-vi-rodando-por-jaen/" target="_blank" rel="noopener noreferrer" title="Ir a la página web con la nota de prensa">Ver nota de prensa<span class="icon" aria-hidden="true"> ↗</span></a>.</p>
 
         </article>
 
@@ -339,7 +339,7 @@
     <!--Contact-->
     <section aria-labelledby="info" class="container">
 
-        <h2 id="info" class="basic-title"><span class="emojis" aria-hidden="true">🤝 </span>¿Hablamos?</h2>
+        <h2 id="info" class="basic-title"><span class="emoji" aria-hidden="true">🤝 </span>¿Hablamos?</h2>
 
         <article aria-label="Datos de contacto" class="container"> 
 
@@ -347,31 +347,31 @@
 
                 <li aria-label="Linkedin" class="info-list-item basic-paragraph">
 
-                    <p aria-label="Contacto por Linkedin"><span class="emojis" aria-hidden="true">👤 </span><b>Linkedin</b>: </p>
+                    <p aria-label="Contacto por Linkedin"><span class="emoji" aria-hidden="true">👤 </span><b>Linkedin</b>: </p>
 
-                    <a class="link" href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Ir al perfil de Linkedin" title="Ir al perfil del Linkedin">alvaromolinaruiz<span class="icons" aria-hidden="true"> ↗</span></a>
+                    <a class="link" href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Ir al perfil de Linkedin" title="Ir al perfil del Linkedin">alvaromolinaruiz<span class="icon" aria-hidden="true"> ↗</span></a>
 
-                    <button class="copy-button" aria-label="Copiar enlace del perfil al portapapeles" title="Copiar enlace del perfil al portapapeles" role="button" tabindex=""><span class="copy-button-text"><span class="icons" aria-hidden="true">❏ </span>Copiar</span></button>
+                    <button class="copy-button" aria-label="Copiar enlace del perfil al portapapeles" title="Copiar enlace del perfil al portapapeles" role="button" tabindex=""><span class="copy-button-text"><span class="icon" aria-hidden="true">❏ </span>Copiar</span></button>
 
                 </li>
                 
                 <li aria-label="Correo electrónico" class="info-list-item basic-paragraph">
 
-                    <p aria-label="Contacto por Correo"><span class="emojis" aria-hidden="true">✉️ </span><b>Correo</b>: </p>
+                    <p aria-label="Contacto por Correo"><span class="emoji" aria-hidden="true">✉️ </span><b>Correo</b>: </p>
 
-                    <a class="link" href="mailto:alvaromolrui@gmail.com" aria-label="Enviar un correo electrónico" title="Enviar un correo electrónico">alvaromolrui@gmail.com<span class="icons" aria-hidden="true"> ↗</span></a>
+                    <a class="link" href="mailto:alvaromolrui@gmail.com" aria-label="Enviar un correo electrónico" title="Enviar un correo electrónico">alvaromolrui@gmail.com<span class="icon" aria-hidden="true"> ↗</span></a>
 
-                    <button class="copy-button" aria-label="Copiar dirección de correo al portapapeles" title="Copiar dirección de correo al portapapeles" role="button" tabindex=""><span class="copy-button-text"><span class="icons" aria-hidden="true">❏ </span>Copiar</span></button>
+                    <button class="copy-button" aria-label="Copiar dirección de correo al portapapeles" title="Copiar dirección de correo al portapapeles" role="button" tabindex=""><span class="copy-button-text"><span class="icon" aria-hidden="true">❏ </span>Copiar</span></button>
 
                 </li>
 
                 <li aria-label="Teléfono" class="info-list-item basic-paragraph">
 
-                    <p aria-label="Contacto por Teléfono"><span class="emojis" aria-hidden="true">📱 </span><b>Teléfono</b>: </p>
+                    <p aria-label="Contacto por Teléfono"><span class="emoji" aria-hidden="true">📱 </span><b>Teléfono</b>: </p>
 
-                    <a class="link" href="tel:+34653265884" aria-label="Llamar por teléfono" title="Llamar por teléfono">(+34) 653 26 58 84<span class="icons" aria-hidden="true"> ↗</span></a>
+                    <a class="link" href="tel:+34653265884" aria-label="Llamar por teléfono" title="Llamar por teléfono">(+34) 653 26 58 84<span class="icon" aria-hidden="true"> ↗</span></a>
 
-                    <button class="copy-button" aria-label="Copiar número de teléfono al portapapeles" title="Copiar número de teléfono al portapapeles" role="button" tabindex=""><span class="copy-button-text"><span class="icons" aria-hidden="true">❏ </span>Copiar</span></button>
+                    <button class="copy-button" aria-label="Copiar número de teléfono al portapapeles" title="Copiar número de teléfono al portapapeles" role="button" tabindex=""><span class="copy-button-text"><span class="icon" aria-hidden="true">❏ </span>Copiar</span></button>
 
                 </li>
 
@@ -388,12 +388,12 @@
 
     <nav aria-labelledby="back-to-top" class="container">
 
-        <a id="back-to-top" class="nav-button align-right basic-paragraph" href="#home" rel="noopener noreferrer" aria-label="Desplazarse al principio de la página" title="Desplazarse al principio de la página">Volver arriba<span class="icons"> ↑</span></a>
+        <a id="back-to-top" class="nav-button align-right basic-paragraph" href="#home" rel="noopener noreferrer" aria-label="Desplazarse al principio de la página" title="Desplazarse al principio de la página">Volver arriba<span class="icon"> ↑</span></a>
 
     </nav>
 
-    <p aria-label="Comentario sobre accesibilidad de la web" class="small-paragraph">Página web creada siguiendo las <a class="link" href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Ir a la página de la W3" title="Ir a la página de la W3">WCAG 2<span class="icons" aria-hidden="true"> ↗</span></a>, tratando de garantizar el nivel AAA.</p>
-    <p aria-label="Descarga del currículum en PDF" class="small-paragraph">Si quieres puedes <a class="link" href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Descargar la versión PDF del currículum" title="Descargar la versión PDF del currículum">descargar la versión PDF<span class="icons" aria-hidden="true"> ↴</span></a>.</p>
+    <p aria-label="Comentario sobre accesibilidad de la web" class="small-paragraph">Página web creada siguiendo las <a class="link" href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Ir a la página de la W3" title="Ir a la página de la W3">WCAG 2<span class="icon" aria-hidden="true"> ↗</span></a>, tratando de garantizar el nivel AAA.</p>
+    <p aria-label="Descarga del currículum en PDF" class="small-paragraph">Si quieres puedes <a class="link" href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Descargar la versión PDF del currículum" title="Descargar la versión PDF del currículum">descargar la versión PDF<span class="icon" aria-hidden="true"> ↴</span></a>.</p>
 
 </footer>
 
