--- a/index.html
+++ b/index.html
@@ -394,8 +394,14 @@
 
     <p aria-label="Comentario sobre accesibilidad de la web" class="small-paragraph">Página web creada siguiendo las <a class="link" href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Ir a la página de la W3" title="Ir a la página de la W3">WCAG 2<span class="icon" aria-hidden="true"> ↗</span></a>, tratando de garantizar el nivel AAA.</p>
     <p aria-label="Descarga del currículum en PDF" class="small-paragraph">Si quieres puedes <a class="link" href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Descargar la versión PDF del currículum" title="Descargar la versión PDF del currículum">descargar la versión PDF<span class="icon" aria-hidden="true"> ↴</span></a>.</p>
+    <p aria-label="Nota sobre transparencia en el uso de datos" class="small-paragraph">Nota sobre <button class="link" id="openDialog" aria-label="Ver aviso de transparencia">transparencia<span class="icon" aria-hidden="true"> ↗ </span></button>en el uso de datos.</p>
 
 </footer>
+
+<dialog id="dialog">
+    <p class="basic-paragraph">Solamente se almacena en localStorage el esquema de color preferido por la persona usuaria. No se alamacena información personal ni se rastrear la actividad de manera individualizada.</p>
+    <button class="nav-button" id="closeDialog" type="reset">Salir</button>
+</dialog>
 
 </body>
 
