--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@
 
     </nav>
 
-    <ul class="info-list" aria-label="Información al pie de página">
+    <ul class="info-list" aria-label="Información sobre la web">
 
-        <li aria-labelledby="download-pdf" class="info-list-item small-paragraph">
+        <li aria-labelledby="download-pdf" class="info-list-item ">
             <p id="download-pdf" aria-label="Descarga del currículum en PDF" class="small-paragraph">Si quieres puedes <a class="link" href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Descargar la versión PDF del currículum" title="Descargar la versión PDF del currículum">descargar la versión PDF<span class="icon" aria-hidden="true"> ↴</span></a>.</p>
         </li>
 
@@ -402,8 +402,8 @@
             <p id="accesibility-comment" aria-label="Comentario sobre accesibilidad de la web" class="small-paragraph">Página web creada siguiendo las <a class="link" href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Ir a la página de la W3" title="Ir a la página de la W3">WCAG 2<span class="icon" aria-hidden="true"> ↗</span></a>, tratando de garantizar el nivel AAA.</p>
         </li>
 
-        <li class="info-list-item small-paragraph" aria-label="Ver nota sobre transparencia en el uso de datos">
-            <button class="link" id="openDialog" title="Abrir ventana">Ver nota<span class="icon" aria-hidden="true">&nbsp;↗</span></button><p>sobre transparencia en el uso de datos.</p>
+        <li class="info-list-item small-paragraph" aria-labelledby="privacy-notes">
+            <p id="privacy-notes" aria-label="Notas sobre transparencia en el uso de datos." class="small-paragraph"><button class="link" id="openDialog" title="Abrir ventana">Ver nota<span class="icon" aria-hidden="true">&nbsp;↗</span></button> sobre transparencia en el uso de datos.</p>
         </li>
 
     </ul>
