--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <!--Acknowledgements-->
     <section aria-labelledby="acknowledgements" class="container">
 
-        <h2 id="acknowledgements" class="basic-title text-ellipsis"><span class="emoji" aria-hidden="true">🏅 </span>Reconocimientos</h2>
+        <h2 id="acknowledgements" class="basic-title text-ellipsis"><span class="emoji" aria-hidden="true">🏅 </span>Premios</h2>
 
         <article aria-labelledby="award01" class="container highlighted">
 
