--- a/index.html
+++ b/index.html
@@ -412,8 +412,6 @@
 
 <dialog aria-labelledby="privacy-notes" id="dialog">
 
-    <div role="button" aria-hidden="true" id="swipeHandle" class="handler"></div>
-
     <h2 id="data-usage" class="big-subtitle big-subtitle-margin">Uso de datos</h2>
 
     <ul aria-label="Lista de uso de datos" class="container list basic-paragraph">
@@ -422,7 +420,7 @@
         <li aria-label="Caso tres" class="item-list">Esta web no utiliza cookies.</li>
     </ul>
 
-    <button class="nav-button align-right" id="closeDialog"><span class="icon" aria-hidden="true">✕&nbsp;</span>Cerrar</button>
+    <button class="nav-button align-right" id="closeDialog" autofocus><span class="icon" aria-hidden="true">✕&nbsp;</span>Cerrar</button>
 </dialog>
 
 </body>
