--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!--About me-->
     <section aria-labelledby="about" class="container">
 
-        <h2 id="introduction" class="big-title big-title-margin"><span class="emoji" aria-label="¡Hola!">👋 </span>Soy Álvaro Molina, <i class="accent-color regular-weight">diseñador de producto</i></h2>
+        <h2 id="introduction" class="big-title big-title-margin"><span class="emoji" aria-label="¡Hola!">&#128075; </span>Soy Álvaro Molina, <i class="accent-color regular-weight">diseñador de producto</i></h2>
 
         <article aria-label="Resumen sobre mi y competencias básicas" class="container">
 
@@ -67,7 +67,7 @@
     <!--Experience-->
     <section aria-labelledby="experience" class="container">
 
-        <h2 id="experience" class="basic-title basic-title-margin text-ellipsis"><span class="emoji" aria-hidden="true">💼 </span>Experiencia</h2>
+        <h2 id="experience" class="basic-title basic-title-margin text-ellipsis"><span class="emoji" aria-hidden="true">&#128188; </span>Experiencia</h2>
 
             <h3 class="big-subtitle big-subtitle-margin content-secondary">Puesto actual</h3>
 
@@ -180,7 +180,7 @@
     <!--Volunteer-->
     <section aria-labelledby="volunteer" class="container">
 
-        <h2 id="volunteer" class="basic-title basic-title-margin text-ellipsis"><span class="emoji" aria-hidden="true">👐 </span>Voluntariado</h2>
+        <h2 id="volunteer" class="basic-title basic-title-margin text-ellipsis"><span class="emoji" aria-hidden="true">&#128080; </span>Voluntariado</h2>
 
             <h3 class="big-subtitle big-subtitle-margin content-secondary">Colaboración en curso</h3>
 
@@ -225,7 +225,7 @@
     <!--Education-->
     <section aria-labelledby="education" class="container">
 
-        <h2 id="education" class="basic-title basic-title-margin"><span class="emoji" aria-hidden="true">📕 </span>Educación y Cursos formativos</h2>
+        <h2 id="education" class="basic-title basic-title-margin"><span class="emoji" aria-hidden="true">&#128214; </span>Educación y Cursos formativos</h2>
 
             <h3 class="big-subtitle big-subtitle-margin content-secondary">Formación en progreso</h3>
 
@@ -324,7 +324,7 @@
     <!--Acknowledgements-->
     <section aria-labelledby="acknowledgements" class="container">
 
-        <h2 id="acknowledgements" class="basic-title basic-title-margin text-ellipsis"><span class="emoji" aria-hidden="true">🏅 </span>Premios</h2>
+        <h2 id="acknowledgements" class="basic-title basic-title-margin text-ellipsis"><span class="emoji" aria-hidden="true">&#127881; </span>Premios</h2>
 
         <article aria-labelledby="award01" class="container highlighted">
 
@@ -339,7 +339,7 @@
     <!--Contact-->
     <section aria-labelledby="info" class="container">
 
-        <h2 id="info" class="basic-title basic-title-margin"><span class="emoji" aria-hidden="true">🤝 </span>¿Hablamos?</h2>
+        <h2 id="info" class="basic-title basic-title-margin"><span class="emoji" aria-hidden="true">&#129309; </span>¿Hablamos?</h2>
 
         <article aria-label="Datos de contacto" class="container"> 
 
@@ -347,7 +347,7 @@
 
                 <li aria-label="Linkedin" class="info-list-item">
 
-                    <p aria-label="Contacto por Linkedin"><span class="emoji" aria-hidden="true">👤 </span><b>Linkedin</b>: </p>
+                    <p aria-label="Contacto por Linkedin"><span class="emoji" aria-hidden="true">&#128100; </span><b>Linkedin</b>: </p>
 
                     <a class="link" href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Ir al perfil de Linkedin" title="Ir al perfil del Linkedin">alvaromolinaruiz<span class="icon" aria-hidden="true"> ↗</span></a>
 
@@ -357,7 +357,7 @@
                 
                 <li aria-label="Correo electrónico" class="info-list-item">
 
-                    <p aria-label="Contacto por Correo"><span class="emoji" aria-hidden="true">✉️ </span><b>Correo</b>: </p>
+                    <p aria-label="Contacto por Correo"><span class="emoji" aria-hidden="true">&#128231; </span><b>Correo</b>: </p>
 
                     <a class="link" href="mailto:alvaromolrui@gmail.com" aria-label="Enviar un correo electrónico" title="Enviar un correo electrónico">alvaromolrui@gmail.com<span class="icon" aria-hidden="true"> ↗</span></a>
 
@@ -367,7 +367,7 @@
 
                 <li aria-label="Teléfono" class="info-list-item">
 
-                    <p aria-label="Contacto por Teléfono"><span class="emoji" aria-hidden="true">📱 </span><b>Teléfono</b>: </p>
+                    <p aria-label="Contacto por Teléfono"><span class="emoji" aria-hidden="true">&#128241; </span><b>Teléfono</b>: </p>
 
                     <a class="link" href="tel:+34653265884" aria-label="Llamar por teléfono" title="Llamar por teléfono">(+34) 653 26 58 84<span class="icon" aria-hidden="true"> ↗</span></a>
 
